# decoct

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: rust.yml
nix/: rust.nix  sources.json
src/: cmd.rs  decoct.yml  main.rs
tests/: decoct_cmd.rs  smrs_cmd.rs
tests/data/: leaves.sbt.json
