[package]
name = "decoct"
version = "1.0.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "The essence of sourmash. An experimental CLI with a subset of the sourmash features, mainly used to drive development of features in the core library."
repository = "https://github.com/luizirber/decoct"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"
edition = "2018"
readme = "README.md"
publish = false

[profile.release]
#debug = true
lto = true
codegen-units = 1

[profile.dev]
codegen-units = 4

[profile.release.build-override]
opt-level = 0

[dependencies]
eyre = "0.4"
clap = { version = "2.33.0", features = ["yaml", "wrap_help"] }
csv = "1.1.1"
env_logger = "0.7.1"
log = "0.4.8"
niffler = { version = "2.0.0", default-features = false }
#needletail = { version = "0.3.2", default-features = false }
needletail = { git = "https://github.com/onecodex/needletail.git", branch = "vp_py3", default-features = false }
rayon = "1.0"
serde = "1.0.103"
serde_json = "1.0.44"
#sourmash = { version = "0.8.0", features = ["parallel"] }
sourmash = { git = "https://github.com/dib-lab/sourmash.git", branch = "refactor/thiserror", features = ["parallel"] }

[target.'cfg(target_env = "musl")'.dependencies.jemallocator]
version = "0.3.0"

[dev-dependencies]
tempfile = "3.1.0"
assert_matches = "1.3.0"
assert_cmd = "1.0.1"
predicates = "1.0.2"
